...
import UIKit

public typealias TextFieldAction = (UITextField) -> ()

public struct Configuration {
    
    public static var ok: String = "OK"
    public static var cancel: String = "Cancel"
    
    public struct Action {
        public static var defaultStyle = UIAlertActionStyle.default
        public static var cancelStyle = UIAlertActionStyle.cancel
    }
    
...
